# wavewire

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  PLAN.txt
src/: config.rs  debug_log.rs  main.rs
src/audio/: client.rs  device.rs  eq.rs  fft.rs  graph.rs  mod.rs  stream.rs  types.rs  volume.rs
src/ui/: mod.rs
