[package]
name = "wavewire"
version = "0.1.0"
edition = "2024"

[dependencies]
# Audio backend - Hybrid approach
# PipeWire for device discovery and routing graph
pipewire = "0.9"
# JACK for actual audio capture (more reliable)
jack = "0.11"

# TUI framework
ratatui = { version = "0.29", features = ["termion"] }
termion = "4.0"

# FFT and signal processing
rustfft = "6.2"

# Error handling
anyhow = "1.0"

# Utilities
crossbeam-channel = "0.5"
